// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should conditionally render discount row 1`] = `
<div>
  <div>
    <mock-FormattedMessage
      defaultMessage="Order Total"
      id="orderDetails.orderTotal"
    />
  </div>
  <div>
    <span>
      <mock-FormattedMessage
        defaultMessage="Subtotal"
        id="orderDetails.subtotal"
      />
    </span>
    <span>
      <span>
        $
      </span>
      <span>
        1
      </span>
      <span>
        ,
      </span>
      <span>
        234
      </span>
      <span>
        .
      </span>
      <span>
        00
      </span>
    </span>
  </div>
  <div>
    <span>
      <mock-FormattedMessage
        defaultMessage="Tax"
        id="orderDetails.tax"
      />
    </span>
    <span>
      <span>
        $
      </span>
      <span>
        34
      </span>
      <span>
        .
      </span>
      <span>
        00
      </span>
    </span>
  </div>
  <div>
    <span>
      <mock-FormattedMessage
        defaultMessage="Shipping"
        id="orderDetails.shipping"
      />
    </span>
    <span>
      <span>
        $
      </span>
      <span>
        12
      </span>
      <span>
        .
      </span>
      <span>
        00
      </span>
    </span>
  </div>
  <div>
    <span>
      <mock-FormattedMessage
        defaultMessage="Total"
        id="orderDetails.total"
      />
    </span>
    <span>
      <span>
        $
      </span>
      <span>
        1
      </span>
      <span>
        ,
      </span>
      <span>
        434
      </span>
      <span>
        .
      </span>
      <span>
        00
      </span>
    </span>
  </div>
</div>
`;

exports[`should render properly 1`] = `
<div>
  <div>
    <mock-FormattedMessage
      defaultMessage="Order Total"
      id="orderDetails.orderTotal"
    />
  </div>
  <div>
    <span>
      <mock-FormattedMessage
        defaultMessage="Subtotal"
        id="orderDetails.subtotal"
      />
    </span>
    <span>
      <span>
        $
      </span>
      <span>
        1
      </span>
      <span>
        ,
      </span>
      <span>
        234
      </span>
      <span>
        .
      </span>
      <span>
        00
      </span>
    </span>
  </div>
  <div>
    <span>
      <mock-FormattedMessage
        defaultMessage="Discount"
        id="orderDetails.discount"
      />
    </span>
    <span>
      <span>
        $
      </span>
      <span>
        123
      </span>
      <span>
        .
      </span>
      <span>
        00
      </span>
    </span>
  </div>
  <div>
    <span>
      <mock-FormattedMessage
        defaultMessage="Tax"
        id="orderDetails.tax"
      />
    </span>
    <span>
      <span>
        $
      </span>
      <span>
        34
      </span>
      <span>
        .
      </span>
      <span>
        00
      </span>
    </span>
  </div>
  <div>
    <span>
      <mock-FormattedMessage
        defaultMessage="Shipping"
        id="orderDetails.shipping"
      />
    </span>
    <span>
      <span>
        $
      </span>
      <span>
        12
      </span>
      <span>
        .
      </span>
      <span>
        00
      </span>
    </span>
  </div>
  <div>
    <span>
      <mock-FormattedMessage
        defaultMessage="Total"
        id="orderDetails.total"
      />
    </span>
    <span>
      <span>
        $
      </span>
      <span>
        1
      </span>
      <span>
        ,
      </span>
      <span>
        434
      </span>
      <span>
        .
      </span>
      <span>
        00
      </span>
    </span>
  </div>
</div>
`;
